# apps.core.preloaded.ug-bluetooth-efl

./: CMakeLists.txt  ug-bluetooth-elf.manifest
data/: CMakeLists.txt  ug-bluetooth-efl.xml
data/help/: help_settings_bluetooth.xml
data/theme_2.3/: bluetooth_genlist.edc  bluetooth_image_macro.edc  bluetooth_images.edc
debian/: changelog  control  libug-setting-bluetooth-efl.install.in  libug-setting-bluetooth-efl.postinst  rules
include/: bt-callback.h  bt-dbus-method.h  bt-debug.h  bt-ipc-handler.h  bt-main-ug.h  bt-main-view.h  bt-net-connection.h  bt-profile-view.h  bt-resource.h  bt-string-define.h  bt-type-define.h  bt-util.h  bt-wearable.h  bt-widget.h
packaging/: ug-bluetooth-efl.spec
po/: CMakeLists.txt  POTFILES.in  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  (+41 more)
src/libraries/: bt-callback.c  bt-dbus-method.c  bt-ipc-handler.c  bt-net-connection.c  bt-util.c  bt-wearable.c
src/ui/: bt-main-ug.c  bt-main-view.c  bt-profile-view.c  bt-widget.c
tables/HD/: ug-bluetooth-efl_ChangeableColorTable.xml  ug-bluetooth-efl_FontInfoTable.xml
tables/WVGA/: ug-bluetooth-efl_ChangeableColorTable.xml  ug-bluetooth-efl_FontInfoTable.xml
